# mmreader

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  目录整理计划.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
devDoc/: Mermaid错误处理代码详解.md  build工具使用说明.md  fixMermaidCode_patch.txt  v1.5.5深度分析报告.md  三层防御体系实施完成报告.md  三层防御体系详细分析与方案.md  代码审查报告.md  修改计划-v1.5.10-debug增强.md  多问题逐个分析和解决方法规则.md  点击目录问题分析报告.md  点击目录问题深度分析报告（完整版）.md  软件代码迭代规则.md  软件迭代代码备份方法规则.md  软件迭代多问题处理规范.md  错误信息.txt  错误说明-关于解析APP使用说明..txt  项目代码回滚操作规则.md
gobuild/: README.md  build-dev.bat  build-dev.sh  build-release.bat  build.sh  export.go  go.mod  go.sum  main.go  package.json  update-version.bat  wails.json
gobuild/frontend/wailsjs/go/main/: App.d.ts  App.js
gobuild/static/: index.html  index.html.current
gobuild/static/css/: mermaid.css  style.css
gobuild/static/js/: app.js  highlight.min.js
notes/: 调试笔记-2026-01-30.md  调试笔记-2026-01-31.md  调试笔记-2026-02-01.md  调试笔记-2026-02-02-append.md  调试笔记-2026-02-02.md  调试笔记-2026-02-03.md  调试笔记-3号UI线框图错误分析-20260203.md  调试笔记-v1.5.8-追加.md  调试笔记-打包记录.md  调试笔记写入规则.md  调试记录_backup.md
productDoc/: APP使用说明.md  APP和系统陪测代码管理规则.md  APP架构设计.md  使用说明.md  需求及问题记录.txt
rustbuild/: Cargo.toml  README.md  build-gnu.ps1  build-msvcrt.ps1  build-ucrt-v2.ps1  package.bat
rustbuild/src/: main.rs
rustbuild/static/: index.html
rustbuild/static/css/: style.css
rustbuild/static/js/: mermaid.min.js
tests/: 1-BUG-STANDARD.md  2-BUG-修复报告.md
web/: app.html
